# ChefSocial

./: .gitignore  ChefSocial-Info.plist  README.md
Backend/: .env  Cargo.toml  Dockerfile  Makefile.toml  appspec.yml  buildspec.yml  dev.sqlite  diesel.toml  docker-compose.yml  local.db
Backend/src/: lib.rs  main.rs  shared.rs
Backend/src/api/: recipes.rs  users.rs
Backend/src/db/: mod.rs  models.rs  schema.rs  seed_data.rs
Backend/src/db/migrations/2025-01-16-180454_create_users/: up.sql
Backend/src/db/migrations/2025-01-22-175148_create_recipes/: down.sql  up.sql
Backend/src/db/migrations/2025-01-27-230503_remove_recipe_cols/: down.sql  up.sql
Backend/src/db/migrations/2025-01-28-214600_create-instructions-and-ingredients/: down.sql  up.sql
Backend/src/handlers/: recipes.rs  users.rs
ChefSocial/: ContentView.swift
ChefSocial.xcodeproj/: project.pbxproj
ChefSocial.xcodeproj/project.xcworkspace/xcuserdata/michaelcrowther.xcuserdatad/: UserInterfaceState.xcuserstate
ChefSocial.xcodeproj/project.xcworkspace/xcuserdata/suzyhlud.xcuserdatad/: UserInterfaceState.xcuserstate
ChefSocialTests/: ChefSocialTests.swift
ChefSocialUITests/: ChefSocialUITests.swift  ChefSocialUITestsLaunchTests.swift
Frontend/: ChefSocialApp.swift  ContentView.swift
Frontend/Extensions/: Hex.swift
Frontend/Views/AddPost/: AddPostView.swift
Frontend/Views/AddRecipe/: AddRecipeView.swift
Frontend/Views/Home/: HomeView.swift
Frontend/Views/Profile/: ProfileView.swift
Frontend/Views/Search/: SearchView.swift
Frontend/utils/: NetworkManager.swift
(+1 files in other folders)
