[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
dotenvy = "0.15"  # for env file support
chrono = { version = "0.4.39", features = ["serde"] }
fake = "3.1.0"
rand = "0.8"

[dependencies.tower-http]
version = "0.3"
features = ["cors"]

[[bin]]
name = "seed"
path = "src/db/bin/seed.rs"